# Basha

./: .dockerignore  .env.example  .gitignore  Dockerfile  GETTING_STARTED.md  JD  README.md  download_flores.py  evaluate_comparison.py  evaluate_pipeline.py  experiment.ipynb  pyproject.toml  render.yaml  requirements.txt
client/: streamlit_app.py
client/web/: index.html
config/: backends.yaml  config.yaml
docs/: PITFALLS.md
samples/input/: dialogue_sample.txt  flores_evaluation_set.json  long_article.txt  news_report.txt  sample.txt  short_story.txt
scripts/: asr_semantic_eval.py  translation_eval.py  tts_eval.py
src/basha/: main.py
src/basha/api/: routes.py  schemas.py
src/basha/core/: cache.py  config.py  logging.py
src/basha/eval/: asr_roundtrip.py  metrics.py
src/basha/jobs/: queue.py
src/basha/pipeline/: chunker.py  orchestrator.py  stitcher.py
src/basha/script/: gender.py  parser.py
src/basha/translation/: base.py  deep_translator_backend.py
src/basha/tts/: base.py  edge_tts.py  factory.py  gtts_backend.py  sarvam.py  voices.py
stitch_basha_multilingual_voice_studio/: DESIGN.md  code.html
tests/: test_api.py  test_cache.py  test_chunker.py  test_eval.py  test_factory.py  test_gender.py  test_jobs.py  test_parser_voices.py
